--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -3,15 +3,32 @@
     background: #209dd8;
     height: 100vh;
     color: #fff;
+    position: relative;
 }
+/*== Setting Container ==*/
+#left-side-user-info-container .setting-container{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+/*== Setting Button ==*/
+#left-side-user-info-container .setting-container img{
+    width: 50px;
+    height: auto;
+    background-color:#fff;
+    border-radius: 8px;
+}
+
 /*=== Profile Picture Container ===*/
-#left-side-user-info-container section:first-child {
+#left-side-user-info-container .user-profile-picture-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 63px 0 24px 0;
 }
 /*=== Profile Picture ===*/
-#left-side-user-info-container .user-profile-picture{
+#left-side-user-info-container  .user-profile-picture{
     width: 240px;
     height: 340px;
     object-fit: cover;
@@ -21,6 +38,46 @@
 #left-side-user-info-container .user-details-container{
     text-align: center;
 }
+/*=== Add Friend Button ===*/
+#left-side-user-info-container .user-profile-picture-container .button-17 {
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #3c4043;
+    cursor: pointer;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans",Roboto,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 28px;
+    justify-content: center;
+    letter-spacing: .25px;
+    line-height: normal;
+    max-width: 100%;
+    overflow: visible;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform  ;
+    margin-bottom: 12px;
+}
+
+#left-side-user-info-container .user-profile-picture-container .button-17:hover {
+    background: rgba(23, 78, 166, 0.35);
+    color: #F6F9FE;
+    transform: scale(1.1);
+}
+
+
 /*=== User's Username ===*/
 #left-side-user-info-container .user-details-container .user-username{
     font-weight: 600;
@@ -65,10 +122,26 @@
     #left-side-user-info-container .user-details-container .user-username{
         font-size: 24px;
     }
+
+    /*== Setting Container ==*/
+    #left-side-user-info-container .setting-container{
+        position: absolute;
+        top: 5px;
+        right: 5px;
+    }
+
+
 }
 
 /*=== Screen smaller then 768px ===*/
 @media (max-width: 768px){
+    /*== Setting Button ==*/
+    #left-side-user-info-container .setting-container img{
+        width: 40px;
+        height: auto;
+        background-color:#fff;
+        border-radius: 8px;
+    }
 }
 
 /*=== Screen smaller then 575px ===*/
@@ -80,7 +153,7 @@
         padding: 24px;
     }
     /*=== Profile Picture Container ===*/
-    #left-side-user-info-container section:first-child {
+    #left-side-user-info-container .user-profile-picture-container {
         display: flex;
         justify-content: center;
         padding: 0;
