--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -17,6 +17,13 @@
     height: auto;
     background-color:#fff;
     border-radius: 8px;
+    transition: all .8s ease-in-out;
+}
+/*=== Setting Button Hover===*/
+#left-side-user-info-container .setting-container img:hover {
+    transform: scale(1.1);
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 /*=== Profile Picture Container ===*/
@@ -70,7 +77,7 @@
     will-change: transform  ;
     margin-bottom: 12px;
 }
-
+/*=== Add Friend Button Hover ===*/
 #left-side-user-info-container .user-profile-picture-container .button-17:hover {
     background: rgba(23, 78, 166, 0.35);
     color: #F6F9FE;
@@ -111,6 +118,12 @@
 
 /*====== Screen smaller then 991px ======*/
 @media (max-width: 991px){
+    /*== Setting Button ==*/
+    #left-side-user-info-container .setting-container img{
+        width: 35px;
+        height: auto;
+        border-radius: 8px;
+    }
     /*=== Profile Picture ===*/
     #left-side-user-info-container .user-profile-picture{
         width: 220px;
@@ -126,8 +139,8 @@
     /*== Setting Container ==*/
     #left-side-user-info-container .setting-container{
         position: absolute;
-        top: 5px;
-        right: 5px;
+        top: 15px;
+        right: 15px;
     }
 
 
@@ -226,7 +239,15 @@
     width: 80px;
     border-radius: 12px;
     margin-bottom: 12px;
+    transition: all .8s ease-in-out;
 }
+
+/*=== Book Cover Hover===*/
+#right-side-user-reviews-container .user-reviews-container .user-profile-book-cover:hover {
+    transform: scale(1.1);
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
 
 /*=== Book Title ===*/
 #right-side-user-reviews-container .user-reviews-container .user-review-book-title{
