--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -13,7 +13,7 @@
     <div class="row">
 
         <!===== Left Side, User Profile Image and Details =====>
-        <div id="left-side-user-info-container" class="col-12 col-sm-4 col-md-3">
+        <div id="left-side-user-info-container" class="col-12 col-sm-4 col-md-4">
             <!===  Settings Button ====>
             <aside class="setting-container">
                 <img th:src="@{/img/settings.png}" alt="Setting Button">
@@ -27,16 +27,17 @@
             <!=== User Details ===>
             <section class="user-details-container">
                 <h2 class="user-username"> Hello <span th:text="${user.getUsername()}">username</span></h2>
-                <aside class="user-fav-genre-container" >
-                    <small>Favorite Genre:</small>
+                <p class="user-bio" th:text="${user.getBio().substring(0, 1).toUpperCase() + user.getBio().substring(1)}"></p>
+                <hr class="w-75 mx-auto">
+                <small class="fav-genre-title">Favorite Genre:</small>
+                <aside class="user-fav-genre-container">
                     <span th:each="favoriteGenre : ${favoriteGenres}" th:text="${favoriteGenre.genre.name}"></span>
                 </aside>
-                <p class="user-bio" th:text="${user.getBio().substring(0, 1).toUpperCase() + user.getBio().substring(1)}"></p>
             </section>
         </div>
 
         <!===== Right Side, User Reviews =====>
-        <div id="right-side-user-reviews-container" class="col-12 col-sm-8 col-md-9">
+        <div id="right-side-user-reviews-container" class="col-12 col-sm-8 col-md-8">
             <!=== Review Title ===>
             <div class="section-title">
                 <h2>Reviews</h2>
@@ -46,28 +47,24 @@
                 <!=== Each Review ===>
                 <div class="user-reviews-container col-11 col-md-9 col-lg-5 row" th:each="review:${usersReview}">
                     <!=== Review Book Info Container ===>
-                    <section class="col-3">
+                    <section class="col-3 col-lg-4">
                         <img class="user-profile-book-cover" th:src="@{img/noImage.png}" th:if="${review.getBookshelf().getCover_page() == ''}" alt="No Image Provided" />
                         <img class="user-profile-book-cover" th:src="${review.getBookshelf().getCover_page()}" th:if="${review.getBookshelf().getCover_page() != ''}" th:alt="${review.getBookshelf().getTitle()}" />
-                        <p>
-                            <span class="user-review-book-title" th:text="${review.getBookshelf().getTitle()}">Book Title</span><br/>
-                            <small class="user-review-author">By <span th:text="${review.getBookshelf().getAuthor()}"></span></small>
-                        </p>
+<!--                        <p>-->
+<!--                            <span class="user-review-book-title" th:text="${review.getBookshelf().getTitle()}">Book Title</span><br/>-->
+<!--                            <small class="user-review-author">By <span th:text="${review.getBookshelf().getAuthor()}"></span></small>-->
+<!--                        </p>-->
                     </section>
                     <!=== Review Container ===>
-                    <section class="col-9">
-                        <!===  Edit Delete Button ====>
-                        <aside>
-                            <img th:src="@{/img/edit-button.png}" alt="Edit Button">
-                            <img th:src="@{/img/delete.png}" alt="Delete Button">
-                        </aside>
+                    <section class="col-9 col-lg-8">
                         <!===  Review Title ====>
-                        <p  class="user-review-title" th:text="${review.title}">Review Title</p>
+                        <span  class="user-review-title" th:text="${review.title}">Review Title</span>
+                        <img th:src="@{/img/edit-button.png}" class="edit-review-button" alt="Edit Button">
                         <!===  Review Rating ====>
                         <span th:switch="${review.rating}" class="">
                             <img th:case="'0'" th:src="@{/img/ratings/noStar.png}" th:alt="${review.rating}" class="user-review-book-rating">
                             <img th:case="'1'" th:src="@{/img/ratings/oneStar.png}" th:alt="${review.rating}" class="user-review-book-rating">
-                            <img th:case="'2'" th:src="@{/img/ratings/twoStar.png}" th:alt="${review.rating}" class="user-review-book-rating">
+                            <img th:case="'2'" th:src="@{img/ratings/twoStars.png}" th:alt="${review.rating}" class="user-review-book-rating">
                             <img th:case="'3'" th:src="@{/img/ratings/threeStars.png}" th:alt="${review.rating}" class="user-review-book-rating">
                             <img th:case="'4'" th:src="@{/img/ratings/fourStars.png}" th:alt="${review.rating}" class="user-review-book-rating">
                             <img th:case="'5'" th:src="@{/img/ratings/fiveStars.png}" th:alt="${review.rating}" class="user-review-book-rating">
