--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -1,93 +1,169 @@
-main section .single-book-cover-googlePlay {
-    position: fixed;
+.main-single-book-container{
+    display: grid;
+    grid-template-columns: 25% 75%;
 }
-    #single-book-cover{
-    height: 520px;
+/* ===== Left Side Container =====*/
+#left-side-book-container {
+    background-color: #37517e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 120px 0;
+}
+/*=== Book Cover Image ===*/
+.single-book-cover{
+    height: 380px;
     width: auto;
     border-radius: 20px;
 }
-.single-book-information-container{
-    line-height: normal;
+/*=== Book Cover Image - NO IMG===*/
+.single-book-cover-noIMG{
+    height: 520px;
+    width: 420px;
+    border-radius: 20px;
 }
- #single-book-title{
+/*=== Purchase Book Button & Favorite Book Button ===*/
+#left-side-book-container .purchase-book-btn, #left-side-book-container .liked-book-btn{
+    background-color: #13aa52;
+    border: 1px solid #13aa52;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    width: 220px;
+    height: 50px;
+    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    outline: none;
+    padding: 10px 25px;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    text-decoration: none;
+}
+/*=== Purchase Book Button: HOVER & Favorite Book Button Hover ===*/
+#left-side-book-container .purchase-book-btn:hover, #left-side-book-container .liked-book-btn:hover{
+    background-color: #0e8641;
+    border: 1px solid #0e8641;
+    transform: translateY(-2px);
+    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+}
+/*=== Favorite Book Button ===*/
+#left-side-book-container .liked-book-btn{
+    background-color: #A2BADCFF;
+    border: 1px solid #A2BADCFF;
+    color: #1e1e1e;
+    margin: 24px 0;
+}
+/*=== Favorite Book Button Hover ===*/
+#left-side-book-container .liked-book-btn:hover{
+    background-color: rgba(100, 149, 237, 0.49);
+    border: 1px solid rgba(100, 149, 237, 0.49);
+    color: #fff;
+}
+/*=== Heart Image ===*/
+#left-side-book-container .liked-book-btn .liked-book-image{
+    width: 30px;
+    height: auto;
+}
+
+
+/* ===== Right Side Container =====*/
+#right-side-book-info-container{
+    padding: 120px 0 0 0;
+    background: rgba(154, 182, 222, 0.27);
+    overflow: scroll;
+    scroll-behavior: smooth;
+    height: 90vh;
+
+}
+/* ===== Single Book Info Container =====*/
+#single-book-info-container{
+    line-height: normal;
+    padding-inline: 80px;
+    width: 100%;
+    font-size: 16px;
+}
+/* ===== Book Title =====*/
+#single-book-info-container h2{
     font-size: 42px;
     font-weight: 600;
-    line-height: normal;
-     padding-top: 24px;
+    padding: 0 0 12px 0;
+    margin: 0;
+    width: 60%;
+    min-width: 420px;
 }
- .single-book-author{
-     font-size: 22px;
-     line-height: 0;
-     padding: 05px 0;
- }
- .single-book-description{
-     line-height:  24px;
- }
- .single-book-genre{
-     background: #47b2e4;
-     border-radius: 50px;
-     width: fit-content;
-     padding: 5px 10px;
-     color:#fff;
-     font-weight: 500;
-     font-size: 16px;
-     text-transform: capitalize;
-     letter-spacing: 1px;
- }
-
- /*===== Star Ratings ====*/
-.single-book-rating{
+/* ===== Book Author =====*/
+#single-book-info-container .single-book-author{
+    font-weight: 400;
+    font-size: 18px;
+}
+/* ===== Book Rating =====*/
+#single-book-info-container .single-book-rating{
     height: 35px;
     width: auto;
 }
-
-.single-book-page-count,.single-book-page-date,.single-book-page-ISBN{
-    font-size: 14px;
-    line-height: 0;
+/* ===== Book Description =====*/
+.single-book-description{
+    padding-top: 24px;
+    line-height:  24px;
+}
+/* ===== Book Genre =====*/
+.single-book-genre{
+    background: #47b2e4;
+    border-radius: 50px;
+    width: fit-content;
+    padding: 5px 10px;
+    color:#fff;
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
 }
 
 
 /*====== Screen smaller then 991px ======*/
 @media (max-width: 991px){
-
-    /*BOOK Image Cover*/
-    #single-book-cover{
-        width: 40vw;
-        height: auto;
-        margin: 0 auto;
+    .main-single-book-container{
+        grid-template-columns: 30% 70%;
     }
-    main section a{
-        width: 40vw;
-        margin: 0 auto;
+    /* ===== Left Side Container =====*/
+    #left-side-book-container {
     }
-    .single-book-genre{
-        font-size: 12px;
+    /*=== Book Cover Image ===*/
+    .single-book-cover{
+        height: 320px;
     }
-}
-
-/*=== Screen smaller then 768px ===*/
-@media (max-width: 768px){
-    main section .single-book-cover-googlePlay {
-     position: relative;
+    /*=== Book Cover Image - NO IMG===*/
+    .single-book-cover-noIMG{
+        height: 320px;
+        width: 220px;
+    }
+    /* ===== Right Side Container =====*/
+    #right-side-book-info-container{
+        padding: 120px 0 60px 0;
     }
 }
 
-/*=== Screen smaller then 575px ===*/
-@media (max-width: 575px){
-
-}
 
 
-
-
-
-/*====== Book Container ======*/
+/*====== Same Books Container ======*/
 .single-book-genre-container{
     border-radius: 25px;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-    /*padding: 25px 15px;*/
     margin: 60px;
     background: #fff;
+    transition: all ease-in-out 0.8s;
+}
+/*====== Same Books Container HOVER ======*/
+.single-book-genre-container:hover{
+    transform: scale(0.9);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 /*===== Cover Pages =====*/
 .single-book-genre-container section .cover-page{
@@ -104,21 +180,21 @@ main section .single-book-cover-googlePlay {
 /*== Title of Book ==*/
 .single-book-genre-info-container .book-title{
     font-weight: 600;
-
 }
 
-
+/*====== User Reviews ======*/
 /*== User Review Container ==*/
 .review-container{
+    max-width: 640px;
     background-color: rgba(32, 157, 216, 0.15);
-    display: flex;
+    display: grid;
+    grid-template-columns: 30% 70%;
     padding: 10px;
+    margin: 24px auto;
     border-radius: 15px;
-    /*width: 40vw;*/
-    /*min-width: 620px;*/
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
-
+/*== Username and user IMG Container ==*/
 .review-container section:first-child{
     padding-top: 12px;
     text-transform: capitalize;
@@ -126,66 +202,71 @@ main section .single-book-cover-googlePlay {
 }
 /*== User Review Profile Image ==*/
 .review-user-profile-img{
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
     border-radius: 80px;
 }
-.review-container section:nth-child(2){
-    padding: 12px 12px 0 12px;
-    margin: 0 auto;
-}
+/*== Review Title ==*/
 .review-container section:nth-child(2) h5{
     font-weight: 700;
 }
+/*== Review Book Rating Images ==*/
 .review-container section:nth-child(2) span .review-book-rating{
     height: 25px;
     width: auto;
 }
+/*== Review Body ==*/
 .review-container section:nth-child(2) p{
-   margin-top: 12px;
+    margin-top: 12px;
     letter-spacing: normal;
     font-weight: 300;
 }
 
 
-
-
-
-/*====== Screen smaller then 991px ======*/
-@media (max-width: 991px){
-    .review-container section:first-child{
-        text-align: left;
-    }
-    /*== User Review Profile Image ==*/
-    .review-user-profile-img{
-        height: 100px;
-        width: 100px;
-        border-radius: 80px;
-    }
-
-}
-
 /*=== Screen smaller then 768px ===*/
-@media (max-width: 768px){
-    .review-container section:first-child{
-        text-align: center;
+@media (max-width: 767px){
+    .main-single-book-container{
+        grid-template-columns: 30% 70%;
     }
-    /*== User Review Profile Image ==*/
-    .review-user-profile-img{
-        height: 120px;
-        width: 120px;
+    /* ===== Left Side Container =====*/
+    #left-side-book-container {
+        padding: 120px 0 20px 0;
+    }
+    /*=== Book Cover Image ===*/
+    .single-book-cover{
+        height: 280px;
+    }
+    /*=== Purchase Book Button ===*/
+    #left-side-book-container .purchase-book-btn{
+        padding: 10px 30px;
+    }
+    /* ===== Right Side Container =====*/
+    #right-side-book-info-container{
+        padding: 80px 0 60px 0;
+    }
+    /* ===== Single Book Info Container =====*/
+    #single-book-info-container{
+        padding-inline: 40px;
     }
 }
 
 /*=== Screen smaller then 575px ===*/
 @media (max-width: 575px){
-
+    .main-single-book-container{
+        display: block;
+    }
+    /*=== Book Cover Image - NO IMG===*/
+    .single-book-cover-noIMG{
+        height: 180px;
+        width: 120px;
+    }
+    /* ===== Right Side Container =====*/
+    #right-side-book-info-container{
+        padding: 60px 0 60px 0;
+    }
+    /* ===== Single Book Info Container =====*/
+    #single-book-info-container{
+        padding-inline: 20px;
+    }
 }
-
-
-
-
-
-
-
-
