--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -47,42 +47,38 @@
 }
 /*=== Add Friend Button ===*/
 #left-side-user-info-container .user-profile-picture-container .button-17 {
-    align-items: center;
-    appearance: none;
-    background-color: #fff;
-    border-radius: 24px;
-    border-style: none;
-    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    background-color: #A2BADCFF;
+    border: 1px solid #A2BADCFF;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
     box-sizing: border-box;
-    color: #3c4043;
+    color: #1e1e1e;
     cursor: pointer;
-    display: inline-flex;
-    fill: currentcolor;
-    font-family: "Google Sans",Roboto,Arial,sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    height: 28px;
-    justify-content: center;
-    letter-spacing: .25px;
-    line-height: normal;
-    max-width: 100%;
-    overflow: visible;
-    padding: 2px 24px;
-    position: relative;
+    width: 220px;
+    height: 50px;
+    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    outline: none;
+    padding: 10px 25px;
     text-align: center;
-    text-transform: none;
-    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    user-select: none;
+    -webkit-user-select: none;
     touch-action: manipulation;
-    width: auto;
-    will-change: transform  ;
-    margin-bottom: 12px;
+    text-decoration: none;
+    margin: 24px 0 0 0;
 }
-/*=== Add Friend Button Hover ===*/
+/*== Add friend Button Hover ===*/
 #left-side-user-info-container .user-profile-picture-container .button-17:hover {
-    background: rgba(23, 78, 166, 0.35);
-    color: #F6F9FE;
-    transform: scale(1.1);
+    background-color: rgba(100, 149, 237, 0.49);
+    border: 1px solid rgba(100, 149, 237, 0.49);
+    color: #fff;
+    transform: translateY(-2px);
+    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
+
 
 
 /*=== User's Username ===*/
@@ -116,10 +112,6 @@
     color: #1e1e1e;
 
 }
-
-
-
-
 
 
 /*====== Screen smaller then 991px ======*/
