Changed sign up button to correct link

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -14,7 +14,7 @@
                 <!== Log in button ==>
                 <li class="mx-lg-3"><a th:href="@{/login}" class="btn-log-in-nav nav-link">Log in</a></li>
                 <!== Get Started Button ==>
-                <li class="pb-3 pb-lg-0"><a th:href="@{/Sign-up}" class="btn-get-started text-center">Get Started</a></li>
+                <li class="pb-3 pb-lg-0"><a th:href="@{/sign-up}" class="btn-get-started text-center">Get Started</a></li>
             </ul>
         </div>
     </div>
