--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -78,8 +78,8 @@
                 <div class="review-container" th:each="review:${bookReview}">
                     <!===== Book Review Username and Profile IMG =====>
                     <section class="">
-                        <img class="review-user-profile-img" th:src="${review.user.profile_picture}" th:if="${review.user.profile_picture != ''}" th:alt="${review.user.username}" />
-                        <img class="review-user-profile-img" th:src="@{img/noProfileImage.png}" th:if="${review.user.profile_picture == ''}" alt="No Image Provided" />
+                        <img class="review-user-profile-img" th:src="${review.user.getProfilePicturePath()}" th:if="${review.user.getProfilePicturePath() != ''}" th:alt="${review.user.username}" />
+                        <img class="review-user-profile-img" th:src="@{img/noProfileImage.png}" th:if="${review.user.profilePicturePath == ''}" alt="No Image Provided" />
                         <h5 th:text="${review.user.username}">Username</h5>
                     </section>
                     <!===== Book Review Title Rating & Body =====>
