minor changes on login

--- a/src/main/resources/templates/SignUp/login.html
+++ b/src/main/resources/templates/SignUp/login.html
@@ -13,7 +13,7 @@
 <!===== Main Login Section =====>
 <main id="login-section">
     <!==== Container ====>
-    <div class="container">
+    <div class="container whole-container">
         <!==== Login Card ====>
         <div class="col col-md-12 col-lg-10 card">
             <!==== Separates sides ====>
@@ -21,7 +21,7 @@
                 <!==== IMG Container ====>
                 <header class="col-md-6 col-lg-5 d-none d-md-block">
                     <!==== Image ====>
-                    <img src="/img/couch.jpg" alt="Login Books" />
+                    <img src="/img/couch.jpg" alt="Login Books" id="login-img" />
                 </header>
                 <!==== Context Container ====>
                 <section class="col-md-6 col-lg-7 d-flex align-items-center">
