Capable to click on books and go to the profile for the book.

--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -134,6 +134,10 @@
     background: #fff;
     transition: all ease-in-out 0.8s;
 }
+.single-book-genre-container a{
+  text-decoration: none;
+    color: #1e1e1e;
+}
 /*====== Same Books Container HOVER ======*/
 .single-book-genre-container:hover{
     transform: scale(0.9);
